exports[`analysisAddForm should have working getBoolField method 1`] = `
Object {
  "defaultValue": false,
  "mapper": Object {
    "fromRaw": [Function fromRaw],
    "toRaw": [Function toRaw]
  },
  "name": "someBool",
  "validator": Object {},
  "value": false
}
`;

exports[`analysisAddForm should have working getStrField method 1`] = `
Object {
  "mapper": Object {
    "fromRaw": [Function fromRaw],
    "toRaw": [Function toRaw]
  },
  "name": "someStr",
  "validator": Object {
    "rawValidator": [Function validator]
  }
}
`;
